<resources>
    <string name="app_name">Music Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back">Go Back</string>
    <string name="now_playing">Now Playing</string>
    <string name="cover_art">Cover art</string>
    <string name="filter_layer">filter layer</string>
    <string name="completion_action">.....</string>
    <string name="play_pause">Play Pause</string>
    <string name="previous">Play previous</string>
    <string name="Next">Play next</string>
    <string name="favorite">Favorite</string>
    <string name="initial_time_00_00">00:00</string>
    <string name="menu_more">Menu more</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_addToFavorite">Add to favorite</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="album">Album</string>
    <string name="path">Path:</string>
    <string name="search">Search</string>
    <string name="no_matching_results">No matching results</string>
    <string name="no_audios">No audios</string>
    <string name="search_title">Play...</string>
    <string name="str_sort_title">Sort by</string>
    <string name="str_cancel_btn">cancel</string>
</resources>