<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerView_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".PlayerActivity">

    <RelativeLayout
        android:id="@+id/layout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient_bg_top_bottom">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_chevron_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:text="@string/now_playing"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_menu" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_card"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@id/layout_top_bar">

        <ImageView
            android:id="@+id/cover_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cover_art"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/filterImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/filter_layer" />
    </RelativeLayout>

    <TextView
        android:id="@+id/song_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_card"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:text="This is song name" />

    <TextView
        android:id="@+id/song_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/song_name"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/white"
        tools:text="This is song artist" />

    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_bg_top_bottom">

        <ImageView
            android:id="@+id/completionAction_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/completion_action"
            android:scaleType="centerInside"
            android:src="@drawable/ic_play_in_order" />

        <ImageView
            android:id="@+id/prev_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/play_pause_button"
            android:contentDescription="@string/previous"
            android:scaleType="fitStart"
            android:src="@drawable/ic_skip_previous" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/play_pause"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play" />

        <ImageView
            android:id="@+id/next_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/play_pause_button"
            android:contentDescription="@string/Next"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_skip_next" />

        <ImageView
            android:id="@+id/favorite_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/favorite"
            android:scaleType="centerInside"
            android:src="@drawable/ic_least_liked" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/seek_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/buttons_layout"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/timeElapsed_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/initial_time_00_00"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/totalDuration_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/initial_time_00_00"
            android:textColor="@color/white" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:progressTint="@color/white"
            android:thumbTint="@color/white" />
    </RelativeLayout>

</RelativeLayout>